--- a/style.css
+++ b/style.css
@@ -16,26 +16,30 @@ h4 {
 }
 
 h1 {
-  font-size: 100px;
+  font-size: 64px;
   color: var(--primary-color);
 }
 
 h2 {
-  font-size: 64px;
+  font-size: 36px;
 }
 
 h3 {
-  font-size: 42px;
+  font-size: 24px;
 }
 
 h4 {
-  font-size: 30px;
+  font-size: 22px;
 }
 
 p {
   font-family: var(--paragraph-font);
-  font-size: 28px;
+  font-size: 20px;
   font-weight: 300;
+}
+
+.footer p {
+  font-size: 16px;
 }
 
 .button {
@@ -53,11 +57,9 @@ p {
 .navbar-brand {
   font-family: var(--heading-font);
   font-weight: 900;
-  font-size: 38px;
 }
 
 .nav-link {
-  font-size: 26px;
   font-family: var(--paragraph-font);
   font-weight: 300;
 }
