--- a/style.css
+++ b/style.css
@@ -94,8 +94,7 @@ p {
 
 .button-contact {
   background: var(--accent-color-2);
-  box-shadow: var(--backround-color) 10px 10px 0px -2px,
-    var(--accent-color-2) 10px 10px;
+  box-shadow: white 10px 10px 0px -2px, var(--accent-color-2) 10px 10px;
 }
 
 .header {
