--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 :root {
   --primary-color: #66101f;
+  --darker-primary: #470b15;
   --accent-color-1: #51724e;
+  --darker-accent-1: #3d553a;
   --accent-color-2: #e06c00;
+  --darker-accent-2: #b85900;
   --backround-color: #f8e9dd;
   --heading-font: "Fraunces", serif;
   --body-font: "Commissioner", sans-serif;
@@ -90,11 +93,25 @@ p {
   background: var(--primary-color);
   box-shadow: rgb(255 255 255) 10px 10px 0px -2px,
     var(--primary-color) 10px 10px;
+  transition: 150ms ease-in-out;
+}
+
+.button-about:hover {
+  color: white;
+  background-color: var(--darker-primary);
+  box-shadow: none;
 }
 
 .button-contact {
   background: var(--accent-color-2);
   box-shadow: white 10px 10px 0px -2px, var(--accent-color-2) 10px 10px;
+  transition: 150ms ease-in-out;
+}
+
+.button-contact:hover {
+  background-color: var(--darker-accent-2);
+  color: white;
+  box-shadow: none;
 }
 
 .header {
@@ -134,24 +151,26 @@ p {
   color: var(--accent-color-1);
 }
 
-.margin-row {
-  margin-top: 85px;
-}
-
 .icons {
   background: var(--accent-color-1);
+  border: none;
   border-radius: 50%;
-  height: 15vw;
-  width: 15vw;
+  height: 12vw;
+  width: 12vw;
   justify-content: center;
   align-items: center;
   max-width: 280px;
   max-height: 280px;
+  transition: 150ms ease-in-out;
+}
+
+.icons:hover {
+  background: var(--darker-accent-1);
 }
 
 .icon-image {
-  height: 12vw;
-  width: 12vw;
+  height: 6vw;
+  width: 6vw;
   max-height: 120px;
   max-width: 120px;
 }
@@ -163,6 +182,11 @@ p {
   font-size: 28px;
   margin-top: 20px;
   text-align: center;
+  transition: 150ms ease-in-out;
+}
+
+.link-recipes:hover {
+  color: var(--darker-accent-1);
 }
 
 .contact {
@@ -206,6 +230,10 @@ p {
   font-weight: 300;
 }
 
+.site-map a:hover {
+  color: var(--backround-color);
+}
+
 .site-map h4 {
   text-align: end;
 }
@@ -215,17 +243,9 @@ p {
   text-align: end;
 }
 
-.socials {
-  padding-right: 200px;
-}
-
 .socials i {
   font-size: 22px;
   margin-top: 10px;
-}
-
-.social-icons {
-  margin-right: 50px;
 }
 
 .socials p {
@@ -239,6 +259,10 @@ p {
   color: white;
 }
 
+.socials a:hover {
+  color: var(--backround-color);
+}
+
 .signature {
   font-family: var(--heading-font);
 }
@@ -247,4 +271,70 @@ p {
   font-size: 16px;
   margin: 34px 50px 0 50px;
   text-align: center;
+}
+
+@media (max-width: 992px) {
+  h1 {
+    text-align: center;
+  }
+
+  .header-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .contact-text {
+    text-align: center;
+    margin-bottom: 50px;
+  }
+
+  .contact-button-div {
+    display: flex;
+    justify-content: center;
+  }
+
+  .margin-row {
+    margin-top: 50px;
+  }
+
+  .margin-small {
+    margin-top: 20px;
+  }
+
+  h4 {
+    text-align: center;
+  }
+
+  .social-icons {
+    display: flex;
+    justify-content: center;
+  }
+
+  .fab {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+}
+
+@media (min-width: 992px) {
+  .contact-button-div {
+    display: flex;
+    justify-content: end;
+    align-items: end;
+  }
+
+  .margin-row {
+    margin-top: 85px;
+  }
+
+  .socials {
+    padding-right: 200px;
+  }
+
+  .social-icons {
+    display: flex;
+    justify-content: space-between;
+    margin-right: 50px;
+  }
 }
