--- a/style.css
+++ b/style.css
@@ -9,6 +9,16 @@
   --heading-font: "Fraunces", serif;
   --body-font: "Commissioner", sans-serif;
   --section-margin-top: 135px;
+  --fsize-h1-desktop: 64px;
+  --fsize-h2-desktop: 36px;
+  --fsize-h3-desktop: 28px;
+  --fsize-h4-desktop: 22px;
+  --fsize-p-deesktop: 20px;
+  --fsize-h1-mobile: 50px;
+  --fsize-h2-mobile: 28px;
+  --fsize-h3-mobile: 22px;
+  --fsize-h4-mobile: 18px;
+  --fsize-p-mobile: 16px;
 }
 
 body {
@@ -25,24 +35,10 @@ h4 {
 }
 
 h1 {
-  font-size: 64px;
   color: var(--primary-color);
 }
 
-h2 {
-  font-size: 36px;
-}
-
-h3 {
-  font-size: 28px;
-}
-
-h4 {
-  font-size: 22px;
-}
-
 p {
-  font-size: 20px;
   font-weight: 300;
 }
 
@@ -276,12 +272,39 @@ p {
 @media (max-width: 992px) {
   h1 {
     text-align: center;
+    font-size: var(--fsize-h1-mobile);
+  }
+
+  h2 {
+    font-size: var(--fsize-h2-mobile);
+  }
+
+  h3 {
+    font-size: var(--fsize-h3-mobile);
+  }
+
+  h4 {
+    font-size: var(--fsize-h4-mobile);
+  }
+
+  p {
+    font-size: var(--fsize-p-mobile);
+  }
+
+  .navbar-brand {
+    font-size: var(--fsize-h3-mobile);
   }
 
   .header-section {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .wrapper {
+    display: flex;
+    flex-direction: row;
+    margin-left: 100px;
   }
 
   .contact-text {
@@ -318,6 +341,40 @@ p {
 }
 
 @media (min-width: 992px) {
+  h1 {
+    font-size: var(--fsize-h1-desktop);
+  }
+
+  h2 {
+    font-size: var(--fsize-h2-desktop);
+  }
+
+  h3 {
+    font-size: var(--fsize-h3-desktop);
+  }
+
+  h4 {
+    font-size: var(--fsize-h4-desktop);
+  }
+
+  P {
+    font-size: var(--fsize-p-deesktop);
+  }
+
+  .navbar-brand {
+    font-size: var(--fsize-h3-desktop);
+  }
+
+  .nav-link {
+    font-size: var(--fsize-p-deesktop);
+  }
+
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   .contact-button-div {
     display: flex;
     justify-content: end;
