--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
   --backround-color: #f8e9dd;
   --heading-font: "Fraunces", serif;
   --body-font: "Commissioner", sans-serif;
-  --section-margin-top: 135px;
+  --section-margin-top-desktop: 135px;
+  --section-margin-top-mobile: 85px;
   --fsize-h1-desktop: 64px;
   --fsize-h2-desktop: 36px;
   --fsize-h3-desktop: 28px;
@@ -23,7 +24,6 @@
 
 body {
   font-family: var(--body-font);
-  background: var(--backround-color);
 }
 
 h1,
@@ -44,22 +44,6 @@ p {
 
 .header p {
   margin: 50px 0;
-}
-
-.m-top {
-  margin-top: var(--section-margin-top);
-}
-
-.p-top {
-  padding-top: var(--section-margin-top);
-}
-
-.section-divide {
-  padding-bottom: 50px;
-}
-
-.p-bottom {
-  padding-bottom: var(--section-margin-top);
 }
 
 .button {
@@ -83,35 +67,6 @@ p {
 .nav-link {
   font-family: var(--paragraph-font);
   font-weight: 300;
-}
-
-.button-about {
-  background: var(--primary-color);
-  box-shadow: rgb(255 255 255) 10px 10px 0px -2px,
-    var(--primary-color) 10px 10px;
-  transition: 150ms ease-in-out;
-}
-
-.button-about:hover {
-  color: white;
-  background-color: var(--darker-primary);
-  box-shadow: none;
-}
-
-.button-contact {
-  background: var(--accent-color-2);
-  box-shadow: white 10px 10px 0px -2px, var(--accent-color-2) 10px 10px;
-  transition: 150ms ease-in-out;
-}
-
-.button-contact:hover {
-  background-color: var(--darker-accent-2);
-  color: white;
-  box-shadow: none;
-}
-
-.header {
-  background: white;
 }
 
 .header-image {
@@ -175,9 +130,6 @@ p {
   text-decoration: none;
   font-family: var(--heading-font);
   color: var(--accent-color-1);
-  font-size: 28px;
-  margin-top: 20px;
-  text-align: center;
   transition: 150ms ease-in-out;
 }
 
@@ -185,9 +137,6 @@ p {
   color: var(--darker-accent-1);
 }
 
-.contact {
-  background: white;
-}
 .wave-contact {
   position: absolute;
   top: -1px;
@@ -207,6 +156,7 @@ p {
 .wave-contact .shape-fill {
   fill: #f8e9dd;
 }
+
 .contact-header {
   text-align: center;
   color: var(--accent-color-2);
@@ -270,6 +220,14 @@ p {
 }
 
 @media (max-width: 992px) {
+  body {
+    background: url(/images/background.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: 120%;
+  }
+
   h1 {
     text-align: center;
     font-size: var(--fsize-h1-mobile);
@@ -291,6 +249,58 @@ p {
     font-size: var(--fsize-p-mobile);
   }
 
+  .m-top {
+    margin-top: var(--section-margin-top-mobile);
+  }
+
+  .p-top {
+    padding-top: var(--section-margin-top-mobile);
+  }
+
+  .p-hero {
+    padding-top: var(--section-margin-top-desktop);
+    padding-bottom: var(--section-margin-top-mobile);
+  }
+
+  .p-bottom {
+    padding-bottom: var(--section-margin-top-mobile);
+  }
+
+  .section-divide-mobile {
+    padding-bottom: 50px;
+  }
+
+  .section,
+  .contact {
+    background: white;
+  }
+
+  .section {
+    padding-top: 35px;
+    margin-top: 120px;
+  }
+
+  .wave-mobile {
+    position: absolute;
+    bottom: -121px;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+  }
+
+  .wave-mobile svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 155px;
+  }
+
+  .wave-mobile .shape-fill {
+    fill: #ffffff;
+  }
+
   .navbar-brand {
     font-size: var(--fsize-h3-mobile);
   }
@@ -301,10 +311,50 @@ p {
     align-items: center;
   }
 
+  .button-about {
+    background: var(--primary-color);
+    box-shadow: var(--backround-color) 10px 10px 0px -2px,
+      var(--primary-color) 10px 10px;
+    transition: 150ms ease-in-out;
+  }
+
+  .button-about:active {
+    color: white;
+    background-color: var(--darker-primary);
+    box-shadow: none;
+  }
+
+  .button-about:visited {
+    color: white;
+  }
+
+  .button-contact {
+    background: var(--accent-color-2);
+    box-shadow: white 10px 10px 0px -2px, var(--accent-color-2) 10px 10px;
+    transition: 150ms ease-in-out;
+  }
+
+  .button-contact:active {
+    background-color: var(--darker-accent-2);
+    color: white;
+    box-shadow: none;
+  }
+
+  .button-contact:visited {
+    color: white;
+  }
+
   .wrapper {
     display: flex;
     flex-direction: row;
-    margin-left: 100px;
+    margin-left: 85px;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+
+  .link-recipes {
+    font-size: var(--fsize-h3-mobile);
+    margin-left: 12px;
   }
 
   .contact-text {
@@ -341,6 +391,10 @@ p {
 }
 
 @media (min-width: 992px) {
+  body {
+    background: var(--backround-color);
+  }
+
   h1 {
     font-size: var(--fsize-h1-desktop);
   }
@@ -361,6 +415,26 @@ p {
     font-size: var(--fsize-p-deesktop);
   }
 
+  .m-top {
+    margin-top: var(--section-margin-top-desktop);
+  }
+
+  .p-top {
+    padding-top: var(--section-margin-top-desktop);
+  }
+
+  .p-bottom {
+    padding-bottom: var(--section-margin-top-desktop);
+  }
+
+  .section-divide {
+    padding-bottom: 50px;
+  }
+
+  .p-hero {
+    padding-top: var(--section-margin-top-desktop);
+  }
+
   .navbar-brand {
     font-size: var(--fsize-h3-desktop);
   }
@@ -369,10 +443,49 @@ p {
     font-size: var(--fsize-p-deesktop);
   }
 
+  .header {
+    background: white;
+  }
+
+  .button-about {
+    background: var(--primary-color);
+    box-shadow: rgb(255 255 255) 10px 10px 0px -2px,
+      var(--primary-color) 10px 10px;
+    transition: 150ms ease-in-out;
+  }
+
+  .button-about:hover {
+    color: white;
+    background-color: var(--darker-primary);
+    box-shadow: none;
+  }
+
+  .button-contact {
+    background: var(--accent-color-2);
+    box-shadow: white 10px 10px 0px -2px, var(--accent-color-2) 10px 10px;
+    transition: 150ms ease-in-out;
+  }
+
+  .button-contact:hover {
+    background-color: var(--darker-accent-2);
+    color: white;
+    box-shadow: none;
+  }
+
   .wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .link-recipes {
+    font-size: var(--fsize-h3-desktops);
+    margin-top: 20px;
+    text-align: center;
+  }
+
+  .contact {
+    background: white;
   }
 
   .contact-button-div {
