--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
   --fsize-p-mobile: 16px;
 }
 
+/* GENERAL SETTINGS */
 body {
   font-family: var(--body-font);
 }
@@ -42,43 +43,7 @@ p {
   font-weight: 300;
 }
 
-.header p {
-  margin: 50px 0;
-}
-
-.button {
-  font-family: var(--heading-font);
-  font-size: 18px;
-  padding: 15px 75px;
-  color: white;
-  text-decoration: none;
-}
-
-.navbar {
-  background: white !important;
-}
-
-.navbar-brand {
-  font-family: var(--heading-font);
-  font-weight: 900;
-  margin: 0 20px;
-}
-
-.nav-link {
-  font-family: var(--paragraph-font);
-  font-weight: 300;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.header-image {
-  max-height: 100%;
-}
-
-.section {
-  position: relative;
-}
-
+/* WAVES STYLING */
 .wave {
   position: absolute;
   top: -136px;
@@ -97,6 +62,68 @@ p {
 
 .wave .shape-fill {
   fill: #ffffff;
+}
+
+.wave-contact {
+  position: absolute;
+  top: -1px;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.wave-contact svg {
+  position: relative;
+  display: block;
+  width: calc(119% + 1.3px);
+  height: 126px;
+}
+
+.wave-contact .shape-fill {
+  fill: #f8e9dd;
+}
+
+/* MARGINS AND PADDING */
+.header p {
+  margin: 50px 0;
+}
+
+/* BUTTONS */
+.button {
+  font-family: var(--heading-font);
+  font-size: 18px;
+  padding: 15px 75px;
+  color: white;
+  text-decoration: none;
+}
+
+/* NAVBAR */
+.navbar {
+  background: white !important;
+}
+
+.navbar-brand {
+  font-family: var(--heading-font);
+  font-weight: 900;
+  margin: 0 20px;
+}
+
+.nav-link {
+  font-family: var(--paragraph-font);
+  font-weight: 300;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+/* HEADER/HERO */
+.header-image {
+  max-height: 100%;
+}
+
+/* RECIPES SECTION */
+.section {
+  position: relative;
 }
 
 .icons-header {
@@ -139,31 +166,13 @@ p {
   color: var(--darker-accent-1);
 }
 
-.wave-contact {
-  position: absolute;
-  top: -1px;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
-}
-
-.wave-contact svg {
-  position: relative;
-  display: block;
-  width: calc(119% + 1.3px);
-  height: 126px;
-}
-
-.wave-contact .shape-fill {
-  fill: #f8e9dd;
-}
-
+/* CONTACT SECTION */
 .contact-header {
   text-align: center;
   color: var(--accent-color-2);
 }
 
+/* FOOTER */
 .footer {
   background: var(--primary-color);
   color: white;
@@ -221,7 +230,9 @@ p {
   text-align: center;
 }
 
+/* MEDIA QUERY MOBILE*/
 @media (max-width: 992px) {
+  /* GENERAL SETTINGS */
   body {
     background: url(/images/background.png);
     background-repeat: no-repeat;
@@ -245,12 +256,14 @@ p {
 
   h4 {
     font-size: var(--fsize-h4-mobile);
+    text-align: center;
   }
 
   p {
     font-size: var(--fsize-p-mobile);
   }
 
+  /* MARGINS AND PADDING*/
   .m-top {
     margin-top: var(--section-margin-top-mobile);
   }
@@ -280,6 +293,7 @@ p {
     padding-bottom: 50px;
   }
 
+  /* BACKGROUND COLORS */
   .section,
   .contact {
     background: white;
@@ -290,6 +304,7 @@ p {
     margin-top: 120px;
   }
 
+  /* WAVE STYLING*/
   .wave-mobile {
     position: absolute;
     bottom: -121px;
@@ -311,16 +326,19 @@ p {
     fill: #ffffff;
   }
 
+  /* NAVBAR */
   .navbar-brand {
     font-size: var(--fsize-h3-mobile);
   }
 
+  /* HEADER/HERO */
   .header-section {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 
+  /* BUTTONS */
   .button-about {
     background: var(--primary-color);
     box-shadow: var(--backround-color) 10px 10px 0px -2px,
@@ -354,6 +372,7 @@ p {
     color: white;
   }
 
+  /* RECIPES SECTION */
   .wrapper {
     display: flex;
     flex-direction: row;
@@ -367,6 +386,7 @@ p {
     margin-left: 12px;
   }
 
+  /* CONTACT SECTION*/
   .contact-text {
     text-align: center;
     margin-bottom: 50px;
@@ -377,10 +397,7 @@ p {
     justify-content: center;
   }
 
-  h4 {
-    text-align: center;
-  }
-
+  /* FOOTER */
   .social-icons {
     display: flex;
     justify-content: center;
@@ -392,7 +409,9 @@ p {
   }
 }
 
+/* MEDIA QUERY DESKTOP*/
 @media (min-width: 992px) {
+  /* GENERAL SETTINGS */
   body {
     background: var(--backround-color);
   }
@@ -417,6 +436,7 @@ p {
     font-size: var(--fsize-p-deesktop);
   }
 
+  /* MARGINS AND PADDING */
   .m-top {
     margin-top: var(--section-margin-top-desktop);
   }
@@ -437,6 +457,11 @@ p {
     padding-top: var(--section-margin-top-desktop);
   }
 
+  .margin-row {
+    margin-top: 85px;
+  }
+
+  /* NAVBAR */
   .navbar-brand {
     font-size: var(--fsize-h3-desktop);
   }
@@ -445,10 +470,12 @@ p {
     font-size: var(--fsize-p-deesktop);
   }
 
+  /* HEADER/HERO */
   .header {
     background: white;
   }
 
+  /* BUTTONS */
   .button-about {
     background: var(--primary-color);
     box-shadow: rgb(255 255 255) 10px 10px 0px -2px,
@@ -474,6 +501,7 @@ p {
     box-shadow: none;
   }
 
+  /* RECIPES SECTION */
   .wrapper {
     display: flex;
     flex-direction: column;
@@ -486,6 +514,7 @@ p {
     text-align: center;
   }
 
+  /* CONTACT SECTION*/
   .contact {
     background: white;
   }
@@ -496,10 +525,7 @@ p {
     align-items: end;
   }
 
-  .margin-row {
-    margin-top: 85px;
-  }
-
+  /* FOOTER */
   .socials {
     padding-right: 200px;
   }
