--- a/style.css
+++ b/style.css
@@ -84,6 +84,26 @@ p {
   fill: #f8e9dd;
 }
 
+.wave-about {
+  position: absolute;
+  top: -1px;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.wave-about svg {
+  position: relative;
+  display: block;
+  width: calc(119% + 1.3px);
+  height: 126px;
+}
+
+.wave-about .shape-fill {
+  fill: white;
+}
+
 /* MARGINS AND PADDING */
 .header p {
   margin: 50px 0;
@@ -121,6 +141,23 @@ p {
   max-height: 100%;
 }
 
+/* ABOUT HEADER */
+.about-header {
+  background: white;
+}
+
+.about-header h2 {
+  margin-top: 50px;
+}
+
+.about-header p {
+  margin: 50px 0;
+}
+
+.about-image {
+  vertical-align: top;
+}
+
 /* RECIPES SECTION */
 .section {
   position: relative;
@@ -151,8 +188,6 @@ p {
 .icon-image {
   height: 6vw;
   width: 6vw;
-  max-height: 120px;
-  max-width: 120px;
 }
 
 .link-recipes {
@@ -164,6 +199,26 @@ p {
 
 .link-recipes:hover {
   color: var(--darker-accent-1);
+}
+
+/* RECIPES SECTION ABOUT PAGE */
+.recipes h2 {
+  text-align: center;
+  color: var(--accent-color-1);
+}
+
+.recipes a {
+  color: var(--accent-color-2);
+  text-decoration: none;
+}
+
+.recipes .card {
+  border: none;
+  border-radius: 0;
+}
+
+.recipes h5 {
+  color: var(--accent-color-1);
 }
 
 /* CONTACT SECTION */
@@ -293,15 +348,15 @@ p {
     padding-bottom: 50px;
   }
 
+  .section {
+    padding-top: 35px;
+    margin-top: 120px;
+  }
+
   /* BACKGROUND COLORS */
   .section,
   .contact {
     background: white;
-  }
-
-  .section {
-    padding-top: 35px;
-    margin-top: 120px;
   }
 
   /* WAVE STYLING*/
@@ -336,6 +391,11 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  /* HEADER ABOUT */
+  .about-header {
+    text-align: center;
   }
 
   /* BUTTONS */
@@ -461,6 +521,10 @@ p {
     margin-top: 85px;
   }
 
+  .margin-small {
+    margin-top: 50px;
+  }
+
   /* NAVBAR */
   .navbar-brand {
     font-size: var(--fsize-h3-desktop);
@@ -473,6 +537,11 @@ p {
   /* HEADER/HERO */
   .header {
     background: white;
+  }
+
+  /* HEADER ABOUT */
+  .text-about-page {
+    padding-right: 50px;
   }
 
   /* BUTTONS */
